Fix bottom arrows display on iOS

--- a/src/Components/ImpactStories/_impactStoriesMobile.scss
+++ b/src/Components/ImpactStories/_impactStoriesMobile.scss
@@ -9,10 +9,28 @@
 	}
 }
 
+.stories-wrapper {
+
+	div:first-child {
+		flex-basis: 80%;
+
+		.title-blurb-wrapper {
+			flex-basis: 100%;
+		}
+	}
+
+	.thumbnail-wrapper {
+		flex-basis: 20%;
+		text-align: right;
+	}
+}
+
 .title-blurb-wrapper {
 	min-height: 170px;
 	padding: 0 10px 0 0;
 }
+
+
 
 .thumbnail {
 	display: none;
